third_party/move/tools/move-asm/tests/assembler/undef_local.exp
processed 1 task
task 0 lines 1-7:  publish --print-bytecode [module 0x66::test]
Error: error: unknown local `z`
  ┌─ test:5:5
  │
5 │     copy_loc z
  │     ^^^^^^^^^^


