third_party/move/tools/move-asm/tests/assembler/undef_local.masm
//# publish --print-bytecode
module 0x66::test

fun f(x: u64): u64
    local y: u64
    copy_loc z
    ret
